# sagasmith

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  CONTEXT.md  LAYOUT.md  LICENSE  LICENSE-ORC.md  Makefile  NOTICE  README.md  kilo.json  pyproject.toml  pyrightconfig.json  ruff.toml  test_output.txt
.agents/skills/: README.md
.kilo/: ARCHITECTURE-DEEPENING-BACKLOG.md  gsd-file-manifest.json  kilo.json
.kilo/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.kilo/command/: gsd-add-phase.md  gsd-add-tests.md  gsd-add-todo.md  gsd-ai-integration-phase.md  gsd-analyze-dependencies.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-check-todos.md  gsd-cleanup.md  gsd-code-review-fix.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-discuss-phase.md  gsd-do.md  gsd-docs-update.md  gsd-eval-review.md  gsd-execute-phase.md  gsd-explore.md  gsd-extract_learnings.md  gsd-fast.md  gsd-forensics.md  gsd-from-gsd2.md  gsd-graphify.md  gsd-health.md  gsd-help.md  gsd-import.md  gsd-inbox.md  gsd-ingest-docs.md  gsd-insert-phase.md  gsd-intel.md  gsd-list-phase-assumptions.md  gsd-list-workspaces.md  gsd-manager.md  gsd-map-codebase.md  gsd-milestone-summary.md  gsd-new-milestone.md  gsd-new-project.md  gsd-new-workspace.md  (+33 more)
.kilo/plans/: 1777230707420-tidy-planet.md  1777233644637-nimble-river.md  1777248774862-jolly-squid.md  (+16 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: WISHLIST.md
test-the-brave1/: campaign.sqlite-shm  campaign.sqlite-wal  campaign.toml
tests/: __init__.py  conftest.py  test_import_and_entry.py
(+532 files in other folders)
