[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sagasmith"
version = "0.0.1"
description = "Local-first single-player AI-run tabletop RPG (PF2e MVP)."
requires-python = ">=3.12,<3.14"
readme = "README.md"
authors = [{ name = "SagaSmith" }]
dependencies = [
    "typer>=0.25,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "keyring>=24,<26",
    "jsonschema>=4.20,<5",
    "httpx>=0.27,<0.29",
    "textual>=0.79,<1",
    "langgraph>=1,<2",
    "langgraph-checkpoint-sqlite>=3,<4",
]

[project.scripts]
sagasmith = "sagasmith.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sagasmith"]
include = [
    "src/sagasmith/**/SKILL.md",
]

[dependency-groups]
dev = [
    "ruff>=0.5,<1",
    "pyright>=1.1.360,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pre-commit>=3.7,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: cross-layer integration tests",
    "smoke: no-paid-call smoke tests",
]
